--- a/index.html
+++ b/index.html
@@ -89,13 +89,9 @@
             letter-spacing: 1.5px;
             text-transform: uppercase;
             background-color: #f1f1f1;
-            /* Gray background color */
             color: #000;
-            /* Black text color */
             padding: 10px 0;
-            /* Adds padding to the top and bottom of the text */
             box-sizing: border-box;
-            /* Ensures padding is included within the width */
         }
         
         .cta-button {
@@ -138,8 +134,7 @@
             <div class="slide">
                 <video class="video" autoplay playsinline muted loop preload="auto">
             <source
-              src="
-              https://www.dropbox.com/scl/fi/kudsb84wabzlwomke4b7m/1.mp4?rlkey=ccz6odphpoacumdj6panuqg1b&st=01ymzeah&raw=1"
+              src="https://www.dropbox.com/scl/fi/kudsb84wabzlwomke4b7m/1.mp4?rlkey=ccz6odphpoacumdj6panuqg1b&st=ksxd2jui&raw=1"
               type="video/mp4"
             />
             Your browser does not support the video tag.
@@ -151,7 +146,7 @@
             <div class="slide">
                 <video class="video" autoplay playsinline muted loop preload="auto">
             <source
-              src="https://www.dropbox.com/scl/fi/mopry053p7fslftzsoduk/2.mp4?rlkey=7ztzxg2wyo2w0u522nz8tjh5c&st=evzk5yxn&raw=1"
+              src="https://www.dropbox.com/scl/fi/mopry053p7fslftzsoduk/2.mp4?rlkey=7ztzxg2wyo2w0u522nz8tjh5c&st=nsjd138n&raw=1"
               type="video/mp4"
             />
             Your browser does not support the video tag.
@@ -177,7 +172,7 @@
             <div class="slide">
                 <video class="video" autoplay playsinline muted loop preload="auto">
             <source
-              src="https://www.dropbox.com/scl/fi/kom1k9lzy0cv5kuv5w7ax/3.mp4?rlkey=snrgr80eygchhg3fgcvu3rmcv&st=gendfp04&raw=1"
+              src="https://www.dropbox.com/scl/fi/kom1k9lzy0cv5kuv5w7ax/3.mp4?rlkey=snrgr80eygchhg3fgcvu3rmcv&st=yrwuldyb&raw=1"
               type="video/mp4"
             />
             Your browser does not support the video tag.
@@ -187,7 +182,7 @@
             <div class="slide">
                 <video class="video" autoplay playsinline muted loop preload="auto">
             <source
-              src="https://www.dropbox.com/scl/fi/ftibg38yoorg7dwdp0fag/4.mp4?rlkey=khu7l0yqyxizj1ieko9p844y1&st=dvww8izo&raw=1"
+              src="https://www.dropbox.com/scl/fi/ftibg38yoorg7dwdp0fag/4.mp4?rlkey=khu7l0yqyxizj1ieko9p844y1&st=5d6wgmmj&raw=1"
               type="video/mp4"
             />
             Your browser does not support the video tag.
@@ -197,7 +192,7 @@
                 <div class="small-text">lawyers 4 cyclists - cyclinglaw.com</div>
             </div>
             <div class="slide">
-                <img src="/images/l4c-white.svg" alt="Cycling Law Logo" class="logo" />
+                <img src="l4c-white.svg" alt="Cycling Law Logo" class="logo" />
                 <div class="text">
                     <b>ADVOCATING FOR</b>
                     <br /><b> INJURED</b>
