--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
             Your browser does not support the video tag.
           </video>
                 <button class="cta-button">Learn More</button>
-                <!-- Small button added here -->
 
                 <div class="small-text">lawyers 4 cyclists - cyclinglaw.com</div>
             </div>
@@ -165,7 +164,6 @@
                     <span style="color: #f7cc52"><b>LIKE YOU</b></span>
                 </div>
                 <button class="cta-button">Learn More</button>
-                <!-- Small button added here -->
 
                 <div class="small-text">lawyers 4 cyclists - cyclinglaw.com</div>
             </div>
@@ -177,6 +175,8 @@
             />
             Your browser does not support the video tag.
           </video>
+                                <button class="cta-button">Learn More</button>
+
                 <div class="small-text">lawyers 4 cyclists - cyclinglaw.com</div>
             </div>
             <div class="slide">
